# trier.de-news-telegram-bot

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  config.ini.sample  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: codeql.yml  main.yml  publish.yml  test.yml
src/: trier-bot.py
src/news/: __init__.py
tests/: test_news.py
tests/testdata/: feed.xml
trier_de_news_telegram_bot/: __init__.py  news.py
